# mytrace

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  env.example  pyproject.toml  run.sh  test_buffered_source_location.py  test_source_location.py
.github/workflows/: README.md  jekyll.yml
aitrace/: __init__.py  __main__.py  buffer.py  config.py  decorators.py  logging_config.py  server.py  tracing.py
aitrace/static/: index.html  script.js  style.css
aitrace_viewer/: .gitignore  index.html  package.json  vite.config.ts
aitrace_viewer/src/: App.tsx  main.tsx  style.css
docs/: .gitignore  Gemfile  README.md  _config.yml  configuration.md  deployment.md  development.md  index.md  install_web.sh  quickstart.md  run_web.sh  source_location_tracking.md  trace_record_format.md  viewer.md  vscode_plugin_format_README.md
docs/_data/: navigation.yml
docs/app/: index.html
docs/archive/: CLEANUP_SUMMARY.md  FEATURE_SUMMARY.md  README.md  buffered_logger_refactoring.md  config_system_summary.md  custom_lens_feature_status.md  density_settings_feature.md  implementation_summary.md  json_tree_examples.md  json_tree_improvements.md  state_persistence_feature.md  target_modes_feature.md  ultra_compact_view.md
docs/vscode/: README.md  format_example.jsonl  plugin_format.md
test/: 01_initial.py  02_simple.py  03_router.py  04_buffered_simple.py  05_target_modes.py  06_new_format_test.py  README.md  TEST_RESULTS.md  __init__.py  common.py
vsc_ext/: .gitignore  .vscodeignore  AGENTS.md  CHANGELOG.md  README.md  package.json  tsconfig.json
vsc_ext/docs/: development.md  (+3 more)
(+31 files in other folders)
